<resources>
    <string name="app_name">CMP309</string>
    <string name="start_button">Start</string>
    <string name="about_button">About</string>
    <string name="stats_button">Stats</string>
    <string name="splash_image_description">Splash Screen Image</string>
    <string name="scan_screen_image_description">Scan Screen Image</string>
    <string name="scan_screen_info_1">Tap the phone to an \n information point</string>
    <string name="scan_screen_info_2">To learn more</string>
    <string name="back">Back</string>
    <string name="code">Enter Code</string>
    <string name="about_contents">
        This application is for use with NFC tags placed around The Gateway to the Glens Museum in Kirriemuir, Angus. It contains information about the various exhibits around the building
        and is best used in conjunction with a visit to the physical location. \n
        \n
        To reproduce the experience of visiting each exhibit, NFC tags can be set up. These tags need to contain a text record (UTF-8) with a number (1 onwards) to access the exhibit information.\n
        \n
        This application was developed by Adam J, visit me online at www.gh0stden.co.uk.
    </string>
    <string name="default_image_description">IMAGE DESCRIPTION</string>
    <string name="default_title">ITEM TITLE</string>
    <string name="default_info">ITEM INFO</string>

    <string name="casket_image_description">Casket Image</string>
    <string name="CasketName">Freedom Casket</string>
    <string name="CasketInfo">
        This silver casket was presented in 1930 by the provost of the time, Henry Peacock to Sir JM Barrie. \n
        The casket was presented to commemorate the Freedom Of Kirriemuir and was said at the time to be \"The Heart\" of Kirrie. \n
        \n
        Sir JM Barrie was the author of Peter Pan, born in 1860 in \'Barrie\'s Birthplace\' only a few minutes walk from the museum. He
        lived there until the age of eight, moving to Glasgow and then back to Forfar in his teen years. \n
        \n
        He used his experiences in his early years, with the death of his brother at a young age, as a base for the writing of \'Peter Pan, or The Boy Who Wouldn\'t Grow Up\'. This stage
        performance was first debut on the 27th December 1904, with this play then developing into the novel \'Peter and Wendy\'. \n
        \n
        The copyright of the various Peter Pan works was transferred to the Great Ormond Street Hospital as a charitable gift by Barrie. \n
        \n
        The casket was sold with the contents of his London home under auction in 1938, it was acquired by Angus Council\'s Art Fund and the National Fund for Acquisitions
        and placed in the museum where it currently sits.
    </string>

    <string name="townmodel_image_description">Town Model Image</string>
    <string name="TownModelName">Town Model</string>
    <string name="TownModelInfo">
        This is a model of how Kirriemuir looked in the 1600\'s. \n
        \n
        The townhouse display gives a window into the history of Kirriemuir town centre. \n
        The building standing in the centre was originally built as a Tolbooth, but since then it\'s been a Town Jail/Courtroom and also a Chemist before
        finally serving as a museum to tell the history of the town. \n
        \n
        The museum tells the story of both Kirriemuir and the Angus Glens, with its various famous personalities such as Sir JM Barrie, Geologist Sir Charles Lyell and
        AC/DC singer Bon Scott.\n
        \n
        It also contains a display of Treasure Trove finds from around the local area, including a carved six lobed Neolithic stone ball,
        Gold 15th century Finger Ring, late Bronze Age Sword and collection of silver long cross pennies.
    </string>

    <string name="bonscott_image_description">Bon Scott Image</string>
    <string name="BonScottName">Bon Scott</string>
    <string name="BonScottInfo">
        Of the numerous famous men and women associated with Kirriemuir, one stands out as iconic in the music industry. \n
        \n
        Ronald Belford \'Bon\' Scott is known worldwide as the lead singer of AC/DC from 1974 until his death in 1980. \n
        Scott lived in Kirriemuir until the age of six, moving to Australia with his family and, after performing in several other bands throughout his twenties he replaced
        lead singer Dave Evans of AC/DC.\n
        \n
        AC/DC\'s popularity grew throughout the 70\'s eventually reaching the top 20\'s in the United States with their 1979 album \'Highway to Hell\'.\n
        However, on the evening of 19th February 1980, Scott died after a night out in London. The album \'Back in Black\' was released by AC/DC a few months later
        as a tribute to Scott, becoming the third best-selling album in history. \n
        \n
        Scott is celebrated every year in Kirriemuir during the \'Bonfest\' festival hosted by DD8 Music.
    </string>
</resources>
