<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    android:orientation="vertical" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:adjustViewBounds="false"
                    android:background="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/back_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="100dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/scan_screen_image_description"
                    app:layout_constraintBottom_toTopOf="@+id/back_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/phoneicon" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/scan_screen_info_2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/scan_screen_info_1"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/splash_button"
                    android:text="@string/back"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>


</LinearLayout>